--- a/src/Styles/Global.scss
+++ b/src/Styles/Global.scss
@@ -3,11 +3,9 @@
 @import './Partials/typography';
 @import 'https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css';
 
-html {
-  box-sizing: border-box;
-}
+
 body {
-  background-color: $body-bg-color;
+  background-color: black;
   background-image: url(../Assets/body-bg.jpg);
   background-size: 100%;
 }
@@ -15,8 +13,8 @@ body {
 #main-container {
   min-width: $abs-min-size;
   max-width: $abs-max-size;
-  width: 90vw;
-  margin: 24px auto;
+  width: 100%;
+  margin: 100px auto;
   padding: 8px 8px 24px 8px;
   height: 100%;
   border: none;
@@ -24,13 +22,29 @@ body {
   border-radius: 24px;
   box-shadow: 0 0 5px 0 $dark-color;
 }
+#overlay{
+    margin:0;
+    padding:0;
+    width:100vw;
+    height:100%;
+    background-color:rgba(0,0,0,.45);
+}
 #topCard {
-  @media (min-width: $scr-tablet) {
-    width: 90%;
-  }
-  @media (min-width: $scr-desk) {
-    width: 100%;
-  }
+    padding:0;
+    box-shadow: none;
+    width:100vw;
+    border-radius: 0;
+    background-image: url(../Assets/Images/hero1.jpg);
+    background-size:100%;;
+    // opacity: .9;
+    background-color:rgba(0,0,0,1);
+    background-position: center;
+//   @media (min-width: $scr-tablet) {
+//     width: 90%;
+//   }
+//   @media (min-width: $scr-desk) {
+//     width: 100%;
+//   }
 }
 .content {
     &-link{
@@ -61,10 +75,10 @@ body {
       border-top-right-radius: inherit;
     }
     @media (min-width: $scr-tablet) {
-      width: 41%;
+      width: 48%;
     }
     @media (min-width: $scr-desk) {
-      width: 28%;
+      width: 23%;
     }
   }
 }
